# demo-fmnist-mlops-pipeline

./: .gitignore  LICENSE  README.md  build.sh  mypy.ini  setup.cfg
conf/: threshold_metrics_for_evaluation.json
conf/pipeline/: config.yaml
conf/pipeline/compile_config/: default.yaml
conf/pipeline/gpu_config/: default.yaml
conf/pipeline/submit_config/: default.yaml
conf/training/: config.yaml
conf/training/model_config/: baseline.yaml
conf/training/training_config/: default.yaml
docker/: Dockerfile.train  Dockerfile.train-gpu
pipeline/: auth_kubeflow.py  compile.py  config.py  pipeline.py  submit.py
pipeline/components/: evaluation_component.yaml  preprocess_data_component.yaml  pull_data_component.yaml  registration_component.yaml  train_component.yaml
tests/pipeline/: test_pipeline.py
tests/resources/data/preprocessed/: test.npz  train.npz
tests/training/: test_evaluate.py  test_preprocess_data.py  test_pull_data.py  test_train.py  test_training.py
training/: config.py  evaluate.py  logger.py  model.py  preprocess_data.py  pull_data.py  register.py  tracker.py  train.py  types.py  utils.py
turorials/: 2-Build-and-train-your-own-model.md  3-Model-evaluation.md  README.md
tutorials/: 1-Model-training-pipeline-overview.md  2-Build-and-train-your-own-model.md  3-Model-evaluation.md  4-Manual-model-deployment.md  README.md
tutorials/resources/: fmnist-sample-input.json
