[metadata]
name = fmnist-playground
description = FMNIST Playground (Tensorflow)
long_description = file: README.md

[options]
include_package_data = True
packages =
  training
  pipeline

install_requires =
  mlflow~=1.22.0
  numpy~=1.21.4
  structlog~=21.4.0
  hydra-core~=1.1.1
  wget
  boto3

[options.extras_require]
kfp =
  click~=8.1.2
  kfp~=1.8.12
tf =
  tensorflow==2.9.0
  keras==2.9.0
dev =
  black==20.8b1
  pytest
  flake8
  mypy
  pytest-watch
